--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: '.Lab10_Rabin'
+          path: 'main.Lab10_Rabin'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
